# receptive_field_analysis_toolbox

./: .all-contributorsrc  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  hacktoberfest.yml  issue-manager.yml
docs/source/: conf.py  index.md  installation.md  usage.md
rfa_toolbox/: __init__.py  custom_pt_example.py  domain.py  graphs.py  main.py  network_components.py  test_graphviz.py  vis_script.py  vizualize.py
rfa_toolbox/architectures/: resnet.py  vgg.py
rfa_toolbox/encodings/nasbench101/: layer_registry.py  rfa.py  utils.py
rfa_toolbox/encodings/pytorch/: __init__.py  domain.py  ingest_architecture.py  intermediate_graph.py  layer_handlers.py  substitutors.py  utils.py
rfa_toolbox/encodings/tensorflow/: ingest_architecture.py
rfa_toolbox/encodings/tensorflow_keras/: ingest_architecture.py  layer_handlers.py
rfa_toolbox/utils/: graph_utils.py  memoize_receptive_field_computations.py
tests/: test_main.py
tests/test_encodings/: test_pytorch.py  test_tensorflow.py
tests/test_graph/: test_dynamic_graph.py  test_graph_components.py  test_utils.py
